web/static/css/app.css
/* ... */
.select2-search input {
    background: #fff url('lib/select2/select2.png') no-repeat 100% -22px;
}

.select2-container .select2-choice {
    height: 23px;
    padding-top: 10px;
    background: #fff;
    font-size: 14px;
    line-height: 14px;
    border-color: #b5b5b5;
}

.select2-container-active .select2-choice {
    border-color: #108eba;
}

.select2-container .select2-choice .select2-arrow b {
    width: 18px;
    margin-left: 6px;
    background-position: 0 4px;
}

.select2-dropdown-open .select2-choice .select2-arrow b {
    background-position: -18px 4px;
}

.select2-container .select2-choice .select2-arrow {
    background: #f0f0f0;
    border: 0;
    width: 30px;
    border-radius: 0 2px 2px 0;
}

.select2-dropdown-open .select2-choice .select2-arrow {
    background: #fff;
}

.select2-container-multi .select2-choices .select2-search-field input {
    padding-top: 9px;
    padding-bottom: 8px;
    padding-left: 9px;
    font-size: 14px;
    line-height: 14px;
}

.select2-default,
.select2-container-multi .select2-choices .select2-search-field input.select2-default {
    font-style: italic;
}

.select2-results {
    margin: 0;
    font-size: 14px;
    padding: 0;
}

.select2-results .select2-no-results,
.select2-results .select2-searching,
.select2-results .select2-selection-limit {
    background: none;
}

.select2-container-multi .select2-choices .select2-search-choice {
    color: #fff;
    border: 0;
    margin-top: 6px;
    -webkit-border-radius: 0; /* Android ≤ 1.6, iOS 1-3.2, Safari 3-4 */
    border-radius: 0; /* Android 2.1+, Chrome, Firefox 4+, IE 9+, iOS 4+, Opera 10.50+, Safari 5+ */
}

.select2-results .select2-no-results {
    padding-left: 7px;
    padding-bottom: 4px;
    font-style: italic;
    font-size: 14px;
    color: #a4a3a3;
}

.select2-container-multi .select2-search-choice-close,
.select2-search-choice-close {
    background: url('../img/select2.png') right top no-repeat;
    left: 4px!important;
    top: 3px!important;
    position: absolute!important;
    -webkit-transition: none!important;
    -moz-transition: none!important;
    transition: none!important;
}
.select2-results .select2-result-label {
    min-height: 25px;
    padding: 3px 7px 4px 7px;
    line-height: 25px;
}

.select2-drop {
    color: #194352;
}

form.small select[multiple] {
    height: 100px;
}

form.small .select2 {
    display: block;
    margin-top: 5px;
}

form.small select[multiple]:active,
form.small select[multiple]:hover {
    outline: none;
    border-color: #2296c1;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
}

form.small input[type="text"] {
    display: block;
    height: 14px;
    border: 1px solid #b5b5b5;
    font-size: 14px;
    line-height: 14px;
    padding: 10px 7px 8px 9px;
    margin-top: 5px;
}

form.small input[type="text"].email {
    width: 60%;
    max-width: 200px;
}

form.small input[type="text"]:focus {
    outline: none;
    border-color: #108eba;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
}
form.small .select2 input[type="text"]:focus {
    outline: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

form.small .control.error input,
form.small .control.error input,
form.small input[type="text"].error:focus,
form.small input[type="text"].error {
    border-color: #D50000;
}

form.small button[type="submit"] {
    margin-top: 9px;
}

form.small .project {
    max-width: 240px;
    width: 72%;
}

form.small .project.finance {
    max-width: 275px;
    width: 72%;
}

form.small .organisation {
    max-width: 280px;
    width: 72%;
}

::-webkit-input-placeholder {
    font-style: italic;
    font-size: 14px;
    line-height: 14px;
    color: #a4a3a3;
    position: relative;
    top: 2px;
}
form.small.signup .date ::-webkit-input-placeholder {
    font-size: 21px;
    line-height: 28px;
}

:-moz-placeholder {
    /* Firefox 18- */
    font-style: italic;
    font-size: 14px;
    line-height: 14px;
    color: #a4a3a3;
    position: relative;
    top: 2px;
}
form.small.signup .date :-moz-placeholder {
    /* Firefox 19+ */
    font-size: 24px;
    line-height: 24px;
}

::-moz-placeholder {
    /* Firefox 19+ */
    font-style: italic;
    font-size: 14px;
    line-height: 14px;
    color: #a4a3a3;
    position: relative;
    top: 2px;
}
form.small.signup .date ::-moz-placeholder {
    /* Firefox 19+ */
    font-size: 24px;
    line-height: 24px;
}

:-ms-input-placeholder {
    font-style: italic;
    font-size: 14px;
    line-height: 14px;
    color: #a4a3a3;
    position: relative;
    top: 2px;
}
form.small.signup .date :-ms-input-placeholder {
    font-size: 24px;
    line-height: 24px;
}

.inner .txt #who {
    background: url("../img/inner-project-who-bg.png") no-repeat 141% top;
}

.inner .txt #why {
    background: url("../img/inner-project-why-bg.png") no-repeat 87% top;
}

.inner .txt #how {
    background: url("../img/inner-project-how-bg.png") no-repeat 78% -9px;
}

.inner .txt section.main .action {
    margin-top: 10px;
}

.inner .start {
    max-width: none;
    padding-top: 53px;
    text-align: center;
}

.inner h2.prompt {
    color:#79939e;
    text-align: center;
    font-size: 27px;
    font-weight: normal;
    letter-spacing: -0.04em;
}
.inner h2.prompt strong {
    color:#108eba;
    font-size: 26px;
    display: block;
    position: relative;
    letter-spacing: -0.045em;
    top: -2px;
    line-height: 27px;
    left: 2px;
}

.inner .start .login {
    display: inline-block;
    padding: 20px 0 18px 0;
}
.inner .start .login p {
    width: 250px;
    text-align: right;
    line-height: 33px;
    margin:0;
    padding: 0 8px 0 0;
    float:left;
}
.inner .start .login li {
    text-align: left;
    width:500px;
    overflow: hidden;
    padding-bottom: 8px;
}
/* ... */

